--- a/lib/gits_web/live/settings_live/profile.html.heex
+++ b/lib/gits_web/live/settings_live/profile.html.heex
@@ -8,11 +8,7 @@
             class="h-full w-full object-cover opacity-50"
           />
         <% else %>
-          <img
-            src={Gits.Bucket.get_image_url(@current_user.avatar)}
-            alt={@current_user.name}
-            class="h-full w-full object-cover"
-          />
+          <img alt={@current_user.name} class="h-full w-full object-cover" />
         <% end %>
       </div>
 
@@ -47,18 +43,3 @@
     </div>
   </.form>
 </.layout>
-<!-- Brevo Conversations {literal} -->
-<script>
-  (function(d, w, c) {
-      w.BrevoConversationsID = '677fe0ffc2a878d34e090918';
-      w[c] = w[c] || function() {
-          (w[c].q = w[c].q || []).push(arguments);
-      };
-      var s = d.createElement('script');
-      s.async = true;
-      s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
-      if (d.head) d.head.appendChild(s);
-  })(document, window, 'BrevoConversations');
-</script>
-<!-- /Brevo Conversations {/literal} -->
-
