feat(api,auth): add avatar upload functionality
- impacts: `gits.accounts.user`, `gits.bucket.image`
- introduce `update :avatar` action in `user` for managing avatar relationships
- implement `create :avatar` in `image` for handling avatar uploads to s3
- update policies to include avatar actions

breaking change: remove `avatar` attribute from `users` table
refs: #1234

--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -10,7 +10,7 @@
       </div>
 
       <.button phx-click={JS.hide(to: "aside")} size={:box} variant={:ghost} class="lg:hidden">
-        <.icon name="lucide--x" />
+        <.icon class="icon-[lucide--x]" />
       </.button>
     </div>
     <div class="grid gap-1 p-2 text-sm font-medium text-zinc-400">
