--- a/lib/gits_web/live/settings_live/profile.html.heex
+++ b/lib/gits_web/live/settings_live/profile.html.heex
@@ -3,33 +3,49 @@
     <.icon class="icon-[fluent--chevron-left-24-regular]" />
     <span class="font-semibold">Back to settings</span>
   </.link>
-  <h1 class="text-3xl font-medium mt-4">Profile & Personal Info</h1>
-  <.form :let={f} for={%{}} class="lg:grid pt-4 lg:pt-8" phx-change="validate" phx-submit="submit">
-    <div class="py-4 flex items-start gap-4">
+  <h1 class="mt-4 text-3xl font-medium">Profile & Personal Info</h1>
+  <.form
+    :let={f}
+    for={@form}
+    class="pt-4 lg:grid lg:pt-8"
+    phx-change="validate"
+    phx-submit="submit"
+  >
+    <div class="flex items-start gap-4 py-4">
       <div class="grid grow gap-2">
         <h3 class="font-semibold">Profile photo</h3>
-        <span class="text-zinc-500 inline-block">Recommended 256 x 256</span>
+        <span class="inline-block text-zinc-500">Recommended 256 x 256</span>
         <%= for entry <- @uploads.avatar.entries do %>
           <p :for={err <- upload_errors(@uploads.avatar, entry)}>
             <.error>{error_to_string(err)}</.error>
           </p>
         <% end %>
 
-        <div class="pt-4 flex gap-4 font-semibold">
-          <label class="text-sm border px-3 py-2 rounded-lg">
+        <div class="flex gap-4 pt-4">
+          <label class="rounded-lg border px-3 py-2 text-sm font-semibold">
             <.live_file_input upload={@uploads.avatar} class="sr-only" />
             <span>Change</span>
           </label>
-          <button class="text-sm border px-3 py-2 rounded-lg"><span>Remove</span></button>
+          <button :if={false} class="rounded-lg border px-3 py-2 text-sm font-semibold">
+            <span>Remove</span>
+          </button>
         </div>
       </div>
-      <div class="bg-zinc-50 size-28 rounded-2xl overflow-hidden">
+      <div class="size-28 overflow-hidden rounded-2xl bg-zinc-50">
         <img :if={@avatar} src={@avatar.url} alt="" class="size-full" />
       </div>
     </div>
 
     <div class="py-4">
       <.input field={f[:name]} type="text" label="Name" />
+    </div>
+    <div class="flex">
+      <button
+        disabled={not @form.changed? or not @form.valid?}
+        class="rounded-lg bg-zinc-900 px-4 py-2 text-sm font-semibold text-white disabled:bg-zinc-400"
+      >
+        <span>Save</span>
+      </button>
     </div>
   </.form>
 </div>
