--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,6 +6,14 @@
   a, button, input {
     @apply outline-none focus:outline-none focus-visible:ring-2 focus-visible:ring-zinc-200 dark:focus-visible:ring-zinc-700;
   }
+
+  summary {
+    list-style: none;
+  }
+      
+  summary::-webkit-details-marker {
+    display: none;
+  }
 }
 
 @layer components {
