--- a/lib/gits_web/live/host_live/team.html.heex
+++ b/lib/gits_web/live/host_live/team.html.heex
@@ -1,1 +1,93 @@
-<div>team invite</div>
+<div class="grid gap-4">
+  <.host_header current_user={@current_user} handle={@host.handle} host_name={@host.name}>
+    <.host_breadcrumb_label text="Home" />
+  </.host_header>
+
+  <div class="p-2">
+    <div class="sm:flex sm:items-center">
+      <div class="sm:flex-auto">
+        <h1 class="text-base font-semibold text-gray-900">Users</h1>
+        <p class="mt-2 text-sm text-gray-700">
+          A list of all the users in your account including their name, title, email and role.
+        </p>
+      </div>
+      <div class="mt-4 sm:ml-16 sm:mt-0 sm:flex-none">
+        <button
+          type="button"
+          class="block rounded-md bg-indigo-600 px-3 py-2 text-center text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+        >
+          Add user
+        </button>
+      </div>
+    </div>
+    <div class="mt-8 flow-root">
+      <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
+        <div class="inline-block min-w-full py-2 align-middle">
+          <table class="min-w-full border-separate border-spacing-0">
+            <thead>
+              <tr>
+                <th
+                  scope="col"
+                  class="sticky top-0 z-10 bg-white/75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8"
+                >
+                  Name
+                </th>
+                <th
+                  :if={false}
+                  scope="col"
+                  class="sticky top-0 z-10 hidden bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell"
+                >
+                  Title
+                </th>
+                <th
+                  scope="col"
+                  class="sticky top-0 z-10 hidden bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell"
+                >
+                  Email
+                </th>
+                <th
+                  scope="col"
+                  class="sticky top-0 z-10 bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter"
+                >
+                  Role
+                </th>
+                <th
+                  scope="col"
+                  class="sticky top-0 z-10 bg-white/75 py-3.5 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8"
+                >
+                  <span class="sr-only">Edit</span>
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr :for={role <- @roles}>
+                <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                  {role.user.name}
+                </td>
+                <td
+                  :if={false}
+                  class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"
+                >
+                  Front-end Developer
+                </td>
+                <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell">
+                  {role.user.email}
+                </td>
+                <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                  {to_string(role.type) |> String.capitalize()}
+                </td>
+                <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-8 lg:pr-8">
+                  <a href="#" class="text-indigo-600 hover:text-indigo-900">
+                    Edit<span class="sr-only">, Lindsay Walton</span>
+                  </a>
+                </td>
+              </tr>
+              
+<!-- More people... -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
