feat(api,frontend): add team invites functionality
- impacts: `hostlive.team`, `invites`, `members`
- introduce `invites` live component for managing team invites
- update routing to include invites endpoint
- refactor `members` component to use `live_component` instead of `live_view`
- enhance `host_header` for better navigation between members and invites

--- a/lib/gits_web/components/layouts/dashboard.html.heex
+++ b/lib/gits_web/components/layouts/dashboard.html.heex
@@ -25,7 +25,7 @@
       />
     </div>
   </aside>
-  <div class="w-full overflow-auto">
+  <div class="w-full overflow-auto max-w-screen-2xl">
     {@inner_content}
   </div>
 </div>
