--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -16,11 +16,7 @@
         <div class="grid gap-2 lg:grid-cols-[theme(space.40)_1fr]">
           <dt class="text-sm/6 grow  text-zinc-500">Logo</dt>
           <dd class="size-12 rounded-md bg-zinc-200 overflow-hidden">
-            <img
-              :if={false}
-              alt={@host.name}
-              class="size-full object-cover"
-            />
+            <img :if={false} alt={@host.name} class="size-full object-cover" />
           </dd>
         </div>
 
