--- a/lib/gits_web/live/host_live/team/members.html.heex
+++ b/lib/gits_web/live/host_live/team/members.html.heex
@@ -1,1 +1,69 @@
-<div>Members</div>
+<div class="lg:p-2 p-4">
+  <div class="flow-root">
+    <div class="-mx-4 -my-2 sm:-mx-6 lg:-mx-8">
+      <div class="inline-block min-w-full py-2 align-middle">
+        <table class="min-w-full border-separate border-spacing-0">
+          <thead>
+            <tr>
+              <th
+                scope="col"
+                class="sticky top-0 z-10 bg-white/75 py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:pl-6 lg:pl-8"
+              >
+                Name
+              </th>
+              <th
+                :if={false}
+                scope="col"
+                class="sticky top-0 z-10 hidden bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter sm:table-cell"
+              >
+                Title
+              </th>
+              <th
+                scope="col"
+                class="sticky top-0 z-10 hidden bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter lg:table-cell"
+              >
+                Email
+              </th>
+              <th
+                scope="col"
+                class="sticky top-0 z-10 bg-white/75 px-3 py-3.5 text-left text-sm font-semibold text-gray-900 backdrop-blur backdrop-filter"
+              >
+                Role
+              </th>
+              <th
+                scope="col"
+                class="sticky top-0 z-10 bg-white/75 py-3.5 pl-3 pr-4 backdrop-blur backdrop-filter sm:pr-6 lg:pr-8"
+              >
+                <span class="sr-only">Edit</span>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr :for={role <- @roles}>
+              <td class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-6 lg:pl-8">
+                {role.user.name}
+              </td>
+              <td
+                :if={false}
+                class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 sm:table-cell"
+              >
+                Front-end Developer
+              </td>
+              <td class="hidden whitespace-nowrap px-3 py-4 text-sm text-gray-500 lg:table-cell">
+                {role.user.email}
+              </td>
+              <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
+                {to_string(role.type) |> String.capitalize()}
+              </td>
+              <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-8 lg:pr-8">
+                <a href="#" class="text-indigo-600 hover:text-indigo-900">
+                  Edit<span class="sr-only">, Lindsay Walton</span>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
